--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ small {
 
 .cta {
     color: white;
-    font-weight: 900;
+    font-weight: 500;
     border: none;
     background-color: #ff7a59;
     border-radius: 3px;
@@ -286,10 +286,196 @@ nav {
     background-image: linear-gradient(45deg, #98e5dc, #00a48d);
 }
 /* end of Section4 */
+/* Section5 */
 .section5 {
-    height: 1520px;
+    /* height: 1520px; only for construction purposes */
     background-color: #F5F8FA;
 }
+
+.integration {
+    max-width: 800px;
+    margin: 0 auto 50px;
+    text-align: center;
+    line-height: 1.7;
+}
+
+.integration img {
+    margin-top: 100px;
+    width: 260px;
+}
+
+.integration h2 {
+    font-size: 32px;
+    color: #33475b;
+    letter-spacing: 1px;
+    font-weight: 900;
+}
+
+.integration p {
+    color: #425b76;
+    padding: 20px 0;
+}
+
+.card-crm {
+    width: 90%;
+    background-color: #ffffff;
+    margin: 0 auto;
+    box-shadow: 20px 20px 20px #f0f4f8, -20px -20px 20px #f0f4f8, 20px -20px 20px #f0f4f8, -20px 20px 20px #f0f4f8;
+    border-radius: 4px;
+}
+
+.card-crm-left {
+    width: 30%;
+    text-align: center;
+    padding: 20px;
+    margin-left: 50px;
+    float: left;
+}
+
+.card-crm-left img {
+    width: 152px;
+    margin: 30px;
+}
+
+.card-crm:hover ,
+.column1:hover ,
+.column2:hover ,
+.column3:hover {
+    transform: scale(1.03);
+    transition: 0.4s
+}
+.cta-small {
+    font-size: 14px;
+    padding: 13px 27px;
+    margin: 20px 0;
+}
+
+.card-crm-right {
+    width: 60%;
+    padding: 20px;
+    margin-top: 20px;
+    float: left;
+}
+
+.wrapper h2 {
+    color: #33475b;
+    font-size: 21px;
+    letter-spacing: 1px;
+}
+
+.wrapper p {
+    font-size: 14px;
+    color: #425b76;
+    line-height: 1.7;
+    margin: 20px 0;
+    text-align: left;
+}
+
+.wrapper h3 {
+    font-size: 13px;
+    color: #33475b;
+    text-transform: uppercase;
+    position: relative;
+    margin: 20px 0;
+    border-top: 1px solid #e0e6ed;
+    padding-top: 25px;
+}
+#wrapper-h3 {
+    padding-top: 0;
+    border-top: none;
+}
+
+.card-crm-right h3:after {
+    content: "";
+    position: absolute;
+    height: 5px;
+    margin-left: 10px;
+    border-bottom: 2px solid #e0e6ed;
+    top: 4px;
+    width: 75%;
+}
+
+.wrapper li {
+    color: #33475b;
+    font-size: 13px;
+    list-style: none;
+    float: left;
+    margin-right: 25px;
+}
+
+.fa-check-circle {
+    font-size: 20px;
+    color: #ff7a59;
+    margin-right: 10px;
+}
+
+.cards-3cl {
+    width: 90%;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+.column {
+    width: 33.33%;
+    float: left;
+    margin-bottom: 100px;
+}
+
+.column1 {
+    padding-right: 15px;
+}
+
+.column2 {
+    padding: 0 15px;
+}
+
+.column3 {
+    padding-left: 15px;
+}
+
+.market,
+.sales,
+.service {
+    background-color: #ffffff;
+    border-radius: 4px;
+    box-shadow: 20px 20px 20px #f0f4f8, -20px -20px 20px #f0f4f8, 20px -20px 20px #f0f4f8, -20px 20px 20px #f0f4f8;
+}
+
+.intro {
+    text-align: center;
+}
+
+.intro img {
+    height: 150px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+}
+
+.intro p {
+    padding: 0 35px;
+}
+
+.intro hr {
+    color: #e0e6ed;
+    width: 75%;
+    margin: 0 auto;
+}
+
+.features {
+    margin: 35px;
+    text-align: center;
+}
+
+.features li {
+    float: none;
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+.cards-3cl .cta-small {
+    margin: 30px 0;
+}
+/* end of Section5 */
 
 .section6 {
     height: 885px;
