--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
 /* Common elements */
 body {
     font-family: 'Lato', sans-serif;
-    overflow-x: hidden;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
 }
@@ -476,12 +475,99 @@ nav {
     margin: 30px 0;
 }
 /* end of Section5 */
-
+/* Section6 */
 .section6 {
-    height: 885px;
-    background-color: #00AEB4;
+    /* height: 885px; only for construction purposes*/
+    /* background-color: #00AEB4; */
 }
 
+.jumbotron-community {
+    background-image: linear-gradient(45deg, #00a4bd, #00bda5);
+}
+
+.jumbotron-community .container {
+    text-align: center;
+}
+
+.community-header {
+    width: 65%;
+    margin: 0 auto;
+    padding-top: 130px;
+}
+
+.community-header h2 {
+    font-size: 32px;
+    color: #ffffff;
+    letter-spacing: 1px;
+    line-height: 1.3;
+    font-weight: 900;
+}
+
+.jumbotron-community p {
+    color: #ffffff;
+    letter-spacing: 1px;
+}
+
+.community-header p {
+    line-height: 1.5;
+    padding-top: 20px;
+}
+
+.board {
+    padding-top: 80px;
+    padding-bottom: 130px;
+}
+
+.item {
+    width: 25%;
+    float:left;
+    padding: 30px;
+}
+
+.board img {
+    height: 33px;
+}
+
+.board h3 {
+    color: #ffffff;
+    font-size: 40px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 7px 0;
+    position: relative;
+    font-weight: 900;
+}
+
+.box1 h3::after,
+.box2 h3::after,
+.box3 h3::after,
+.box5 h3::after,
+.box7 h3::after,
+.box8 h3::after {
+    content: "+";
+    position: absolute;
+    top: 35%;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.item1,
+.item2,
+.item3,
+.item4 {
+    border-bottom: 1px solid #ffffff;
+}
+
+.item1,
+.item2,
+.item3,
+.item5,
+.item6,
+.item7 {
+    border-right: 1px solid #ffffff;
+}
+/* end of Section6 */
 .section7 {
     height: 290px;
     background-color: #FFFFFF;
